# navigation

./: .gitignore  README  README.md
api/franca/: .gitignore  CMakeLists.txt  CommonTypes.fidl  README  README.md
api/franca/POIService/: POIServiceContentAccessModule.fidl  POIServiceSearch.fidl
api/franca/hmi/: CMakeLists.txt
api/franca/hmi/speechoutputservice/: CMakeLists.txt  SpeechOutput.fidl
api/franca/hmi/speechservice/: CMakeLists.txt  SpeechOutput.fidl
api/franca/navigation/: CMakeLists.txt  Navigation.fdepl  NavigationSettings.fidl  NavigationTypes.fdepl  NavigationTypes.fidl
api/franca/navigation/freetextsearch/: FreeTextSearch.fidl  FreeTextSearchTypes.fidl
api/franca/navigation/freetextsearchservice/: CMakeLists.txt  FreeTextSearch.fidl
api/franca/navigation/mapviewer/: CMakeLists.txt  (+7 more)
api/franca/poi-service/: POIServiceContentAccess.fidl  POIServiceTypes.fidl
src/freetextsearch-service-wamp/: CMakeLists.txt  FreeTextSearchService.cpp  FreeTextSearchStubImpl.cpp  FreeTextSearchStubImpl.hpp  main.cpp
src/freetextsearch-service-wamp/workdir/: commonapi.ini  runRESTClient.sh  runServer.sh
src/navigation/: .gitignore  CMakeLists.txt  README  README.md  build.sh  clone_and_build.sh  commonapi-dbus.ini  kill_navit  macro-generate-plugin.cmake  plugins.pro  rebuild_all.sh  run  run-capi  update_navit.sh  update_positioning.sh  update_third_party.sh
src/navigation/map/: CMakeLists.txt
src/navigation/map-viewer/: CMakeLists.txt  navit_genivi_mapviewer.xsl  navit_genivi_mapviewer_capi.xsl  navit_genivi_mapviewer_fsa.service
src/navigation/navigation-common/: navigation-common-dbus.h
src/navigation/navigation-core/: CMakeLists.txt  navit_genivi_navigationcore.xsl  navit_genivi_navigationcore_capi.xsl  navit_genivi_navigationcore_fsa.service
src/navigation/patches/: 0001-add-wayland-ilm-support-navit.patch  0001-client.pro-Disable-create_cmake-configuration.patch  0002-Update-ivi-application.xml-and-fix-inplementation-of.patch  avoid-crash-on-guidance-when-delete-and-recreate-route.diff  cmake_current_source_dir_for_navit.diff  fsa_issue_padding.diff  ksvg2png_remove_output_param.diff  search_list_get_unique.diff
src/navigation/poi-cam/: CMakeLists.txt  genivi_poiservice_cam_navit.cxx
src/navigation/script/: 0navit.mk  0positioning.mk  1navit.mk  Makefile  README  build.sh  map-viewer.mk  navigation-core.mk  poi-cam.mk  run  set-env-ilm.sh  toolchain.cmake
src/poi-service/: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build.sh  easy_code_completion_for_qtcreator.sh  kill-all  rebuild_all.sh  run  run-capi
src/poi-service/poi-common/: common-data-model.h  poi-common-data-model.h  poi-common-database-utf.cpp  poi-common-database-utf.h  poi-common-database.cpp  poi-common-database.h  poi-common-dbus-data-model-new-variant.h  poi-common-dbus-data-model.h  poi-common-math.cpp  poi-common-math.h
src/poi-service/poi-manager-server/: CMakeLists.txt  README.md  build.sh  main.cpp  poi-manager-server-stub.cpp  poi-manager-server-stub.h  run.sh
src/poi-service/poi-server/: CMakeLists.txt  database.cpp  database.h  main.cpp  poi-datamodel.h  poi-server-class.h  poi-server.pro  poi-server.service
src/poi-service/poi-server-capi/: CMakeLists.txt  main.cpp  poi-datamodel.h
src/poi-service/resource/: LICENSE  commonapi-dbus.ini  poi-database-managed.db
src/poi-service/script/: Makefile  build-for-commonapi.sh  build.sh  generate-api-for-navigation.sh  generate-api.mk  get-positioning.mk  poi-database-managed.db  poi-database-sample.db  poi-server.mk  run
src/speech/: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  test-speech-capi.py
src/speech-service/: CMakeLists.txt  build.sh  kill-all  main.cpp  run  test-speech.py
test/freetextsearch-service/: CMakeLists.txt  main.cpp
test/navigation/dlt-triggers/: CMakeLists.txt  navigation.dlf  test-scripts.dlf  test-trigger.c
test/poi-service/: .gitignore  CMakeLists.txt  README  README.md  build.sh  clone_and_build.sh  poi-resource.rcc  prepare  rebuild_all.sh  run  run_capi  test-poi-capi.py  test-poi.py
test/poi-service/poi-client/: CMakeLists.txt  about-dialog.cpp  about-dialog.h  about-dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  poi-client-DBusConfigurationInterface.cpp  poi-client-DBusConfigurationInterface.h  poi-client-DBusContentAccessInterface.cpp  poi-client-DBusContentAccessInterface.h  poi-client-DBusEnhancedPositionInterface.cpp  poi-client-DBusEnhancedPositionInterface.h  poi-client-DBusGuidanceInterface.cpp  poi-client-DBusGuidanceInterface.h  poi-client-DBusNavigationCoreSessionInterface.cpp  poi-client-DBusNavigationCoreSessionInterface.h  poi-client-DBusRoutingInterface.cpp  poi-client-DBusRoutingInterface.h  poi-client-DBusSearchInterface.cpp  poi-client-DBusSearchInterface.h  poi-client-config.h  poi-client.conf  poi-client.desktop.desktop  poi-client.pro  ui_about-dialog.h  ui_mainwindow.h
test/poi-service/poi-common/: about.txt  poi-cam-resource.qrc  poi-client-resource.qrc  poi-client_en.ts  poi-client_jp.ts  poi-common-data-model.h  poi-common-types.h  poi-content-access-module_en.ts  poi-content-access-module_jp.ts  poi-contentaccess-module_en.ts  poi-contentaccess-module_jp.ts  poi-marshal-handler.cpp  poi-marshal-handler.h  poi-resource.qrc
test/poi-service/poi-contentaccess-module/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  poi-contentaccess-module-class.h  poi-contentaccess-module.pro  poi-datamodel.h  ui_mainwindow.h
test/poi-service/poi-manager-client/: CMakeLists.txt  README.md  build.sh  commonapi-dbus.ini  main.cpp  run  run.sh
test/poi-service/poi-supplier/: CMakeLists.txt  database.cpp  database.h  main.cpp  poi-datamodel.h  poi-supplier.pro  raw-file-sort.cpp  raw-file-sort.h
test/poi-service/resource/: commonapi-dbus.ini
test/poi-service/script/: Makefile  build.sh  create-scheme.sql  generate-api.mk  get-positioning.mk  kill-all  make-database  poi-client.mk  poi-contentaccess-module.mk  poi-supplier.mk  populate-database-additional.sql  populate-database.sql  prepare  run
(+955 files in other folders)
